- Store when a game has last paid coins. - Display a "This game may not pay coins" on the game's detail page if necessary.

--- a/src/gwt/client/games/GamesMessages.properties
+++ b/src/gwt/client/games/GamesMessages.properties
@@ -25,6 +25,8 @@ gdpShop = Game Shop
 # Message so developers know why they don't have a PLAY button
 gdpNoWhirled = This AVRG does not have an associated whirled.
 
+gdpNoCoins = This game may not pay coins.
+
 tabInstructions = Instructions
 tabComments = Comments
 tabTrophies = Trophies
