User interface for complaining about conversations

--- a/src/gwt/client/mail/MailMessages.properties
+++ b/src/gwt/client/mail/MailMessages.properties
@@ -30,6 +30,7 @@ mailDeleteTip = Delete this conversation
 # ConvoPanel
 
 convoWith = Conversation with {0}
+convoSpectate = Conversation For Review
 
 convoBack = Back to Inbox
 convoDelete = Delete
@@ -38,6 +39,15 @@ convoReply = Reply...
 convoFollowUp = Follow up...
 convoAttach = Attach item...
 convoSend = Send
+
+convoComplain = Complain
+convoComplainTitle = Complain About {0}
+convoComplainTip = You are about to register a complaint against {0} for the content of this \
+  conversation. Your complaint and the conversation will be reviewed by our support staff. Do not \
+  delete the conversation until the complaint has been resolved.
+convoComplainTip2 = Please enter a short but clear reason why you are filing this complaint:
+convoInvalidReason = A reason for the complaint is required.
+convoComplaintRegistered = Complaint reported successfully
 
 #
 # StartConvoCallback
