--- a/src/gwt/client/shell/ServerMessages.properties
+++ b/src/gwt/client/shell/ServerMessages.properties
@@ -110,3 +110,7 @@ money_overdrawn = The account doesn''t have enough money to deduct that much!
 # Admin messages
 
 ab_test_duplicate_name = There is already another test with this name.
+
+#
+# MailService messages
+conversation_complaint_already_registered = You have already complained about this conversation.
