Don't send invites to someone called "Enter your friend's name..."

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -203,6 +203,7 @@ inviteFriendEmail = Enter your friend''s e-mail...
 inviteInvalidEmail = The e-mail address is improperly formatted.
 inviteEmptyFromField = Please fill in your name in the "From" field
 inviteAdd = Add
+inviteInvalidName = Please enter your friend''s name.
 
 inviteGrabber = Or import e-mail addresses from your webmail account:
 inviteSupported = Supported Accounts
