--- a/src/gwt/client/adminz/AdminMessages.properties
+++ b/src/gwt/client/adminz/AdminMessages.properties
@@ -28,6 +28,7 @@ displayDashboard = Display Dashboard
 reviewButton = Review Flagged Items
 issueInvites = Issue Invites to Players
 promosButton = Promotions
+contestsButton = Contests
 affMapButton = View affiliate mappings
 browseButton = Player Browser
 viewABTests = View or Create A/B Tests
@@ -209,3 +210,34 @@ promoAdd = Publish Promotion
 promoDeleteTip = Delete this promotion.
 promoDeleteConfirm = Undo is hard. Confirmation is easy. \
   Are you sure you want to delete this promotion?
+
+#
+# ContestsEditor
+
+contestsLoading = Loading...
+contestsTitle = Contests
+contestsCreate = Create Contest
+
+contestsIntro = Contest will be displayed in the "Current Contests" between their start and \
+  end times, then moved to the "Past Contests" section.  Text fields may contain HTML including \
+  links.
+contestsId = Unique Contest ID
+contestsName = Name
+contestsBlurb = Blurb
+contestsStatus = Status
+contestsPrizes = Prizes
+contestsPastBlurb = "Past Contest" Mini Blurb
+contestsIcon = Icon
+contestsStarts = Starts
+contestsEnds = Ends
+contestsChange = Change...
+contestsPreview = Preview:
+
+contestsClearButton = Clear Form
+contestsAddButton = Create Contest
+contestsUpdateButton = Update Contest
+
+contestsEditTip = Edit this contest.
+contestsDeleteTip = Delete this contest.
+contestsDeleteConfirm = Undo is hard. Confirmation is easy. \
+  Are you sure you want to delete this contest?
