A framework for structured stats collection and reporting.
The /status servlet exists so that we can debug strange runtime behavior via a
mobile phone. For more voluminous and detailed runtime statistics, we want the
ability to sort and summarize the data that comes from a bunch of nodes and
that's way more than the /status servlet can and should handle.

This framework allows us to collect data from multiple servers and combine it
into a StatsModel in whatever way makes sense for the stats in question and
then we'll have an admin page that displays these stats using a fancy GWT table
that slices, dices and even make julienne fries.

--- a/src/gwt/client/adminz/AdminMessages.properties
+++ b/src/gwt/client/adminz/AdminMessages.properties
@@ -29,6 +29,7 @@ reviewButton = Review Flagged Items
 issueInvites = Issue Invites to Players
 promosButton = Promotions
 contestsButton = Contests
+statsButton = Server Stats
 affMapButton = View affiliate mappings
 browseButton = Player Browser
 viewABTests = View or Create A/B Tests
@@ -241,3 +242,7 @@ contestsEditTip = Edit this contest.
 contestsDeleteTip = Delete this contest.
 contestsDeleteConfirm = Undo is hard. Confirmation is easy. \
   Are you sure you want to delete this contest?
+
+#
+# StatsPanel
+
