Change #people-friendly to show offline greeters too. Renamed some gmsgs to better reflect what they are for.

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -185,7 +185,6 @@ friendsSelfTitle = My Friends
 friendsNoSuchMember = That person could not be found.
 
 friendsWhoseFriends = {0}''s Friends
-friendsWhoseGreeters = Friendly People
 friendsWhoseFriendsAndGreeters = {0}''s Friends And Friendly People
 
 #
@@ -290,4 +289,5 @@ linkToWhirledIntro = Copy the html code below to put cool Whirled graphics on yo
 #
 # GreeterPanel
 greetersTitle = Friendly People
-noGreetersOnline = There are no Friendly People currently online.
+noGreeters = There are no Friendly People.
+greetersListTitle = Friendly People
