Fix NPE when a guest is viewing a member's friends.

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -17,6 +17,7 @@ indexLogon = Logon to view your profile.
 # SearchMembersPanel
 
 search = Find someone:
+searchGreetersLink = Show Friendly People
 
 #
 # ProfilePanel
