Include a link to friendly people in the search controls. Removes the "Find Someone" title to make room. These changes complete the accidental changes from r13578

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -17,7 +17,7 @@ indexLogon = Logon to view your profile.
 # SearchMembersPanel
 
 search = Find someone:
-searchGreetersLink = Show Friendly People
+searchGreetersLink = See Friendly People
 
 #
 # ProfilePanel
