New landing page for the monthly design contest (a continuation of the deviant art contest) at #landing-designcontest.  Actual text still TBD.  Combined layout for the three contest pages.

--- a/src/gwt/client/landing/LandingMessages.properties
+++ b/src/gwt/client/landing/LandingMessages.properties
@@ -9,6 +9,7 @@
 titleCreators = Whirled Welcomes Creators
 titleDAContestWinners = Design Your Whirled DeviantArt Contest Winners
 titleGameContest = Flash Game Developer Challenge
+titleDesignContest = Design Your Whirled Contest
 
 #
 # Landing page messages
@@ -25,25 +26,6 @@ landingAbout = About
 landingTerms = Terms & Conditions
 landingPrivacy = Privacy Policy
 landingHelp = Help
-
-#
-# Deviant Art Contest page
-
-dacontestRules = <p>Entrants must be 13 years old or older to participate in the Design Your \
-  Whirled Contest</p> \
-  <p>Entries may use any item in the Whirled Shop to create their Whirled.  Creating your own \
-  original items is encouraged, but not required.</p> \
-  <p>Individual rooms and multi-room Whirleds will both be considered.</p> \
-  <p>No copyrighted images can be used in any way.</p> \
-  <br /> \
-  <a href="http://wiki.whirled.com/DeviantArt_Contest">Please see this page \
-  for additional terms and conditions.</a>
-
-dacontestJudging = Contest entries will be judged based on technical skill, originality, and \
-  creativity.<br /><br /><br />\
-  <b>Judges:</b> <a href="#people-8">Cleaver: CEO and Hand-waver</a>, <br />\
-  <a href="#people-12">Nemo: Lead Artist</a>, <a href="#people-13">Brittney: Artist</a>, <br /> \
-  <a href="#people-316">Billiam: Artist</a>, <a href="#people-12770">Vortex: Lead Agent</a>
 
 #
 # DeviantArt contest winners page
@@ -260,3 +242,50 @@ gamesTagline = Play games.  Make friends.<br/>  Make stuff.
 roomsCenterTitle = Explore Rooms<br/> on Whirled!
 roomsCenterText = Just a few of the awesome rooms to explore with your friends!
 roomsTagline = Play games.  Make friends.<br/>  Make stuff.
+
+#
+# Design Your Whirled contest landing page
+
+designconIntroTitle = About the Contest
+designconIntroText = <p><a href="#landing">Whirled</a> is a flash based multiplayer \
+  social networking and gaming site.  You can create your own rooms in whirled, including \
+  backdrops, furniture, toys, games and pets.</p> \
+  <p>The Design Your Whirled Contest is a monthly contest to search for the most interesting, \
+  original and beautiful rooms on Whirled.</p>
+
+designconPrizesTitle = Prizes
+designconPrizesText = <p>First place wins a Cintiq 12WX.  Five runners-up will receive Whirled \
+  prize packs including stickers and buttons.  All the winning rooms will be prominently linked \
+  in Whirled.</p>
+
+designconCreateTitle = How To Create a Room
+designconCreateText = <p>After you <a href="#account-signup">create an account</a>, visit \
+  <a href="#world-home">your home</a> by clicking Me and then the home-shaped icon, or by \
+  clicking the Whirled logo at the top of every page.</p> \
+  <p>Customize your room with purchases from <a href="#shop">the Shop</a> or creations that \
+  you upload.  Visit the <a href="http://wiki.whirled.com">Whirled Wiki</a> to learn more about \
+  creating custom items for Whirled.</p>
+  
+designconEnterTitle = How to Enter the Contest
+designconEnterText = <p>You may enter as many rooms as you like.  To enter a finished room, \
+  copy the link by clicking on the Share button at the bottom of your room (looks like &lt; \
+  &gt;) then clicking on Grab the link, then post the link to <a href="">this discussion \
+  thread</a>.  You''ll be notified by email if you win!</p>
+  
+designconRulesTitle = Rules and Judging
+designconRulesText = \
+  <ul> \
+    <li>Contest entries will be judged based on technical skill, originality, and \
+        creativity.</li> \
+    <li>Entrants must be 13 years old or older to participate in the Design Your Whirled \
+        Contest</li> \
+    <li>Entries may use any item in the Whirled Shop to create their Whirled.  Creating your \
+        own original items is encouraged, but not required.</li> \
+    <li>Individual rooms and multi-room Whirleds will both be considered.</li> \
+    <li>No copyrighted images can be used in any way.</li> \
+   </ul> \
+  <p><a href="http://wiki.whirled.com/">Please see this page for additional terms and \
+  conditions.</a></p>
+
+  
+
