That wasn't so bad. About 3 minutes integrating and 90 minutes fucking with CSS and getting the column widths to default to something reasonable. Still need to make sorting work properly, it's currently doing lexical sorting which is not so appropriate for numbers.

--- a/build.xml
+++ b/build.xml
@@ -73,6 +73,7 @@
     <file name="${extlibs.dir}/guice.jar"/>
     <file name="${extlibs.dir}/gwt-user.jar"/>
     <file name="${extlibs.dir}/gwt-dnd.jar"/>
+    <file name="${extlibs.dir}/gwt-incubator.jar"/>
     <file name="${extlibs.dir}/gwt-widgets.jar"/>
     <file name="${extlibs.dir}/javassist.jar"/>
     <file name="${extlibs.dir}/jcip-annotations.jar"/>
@@ -226,6 +227,7 @@
   <!-- declare our GWT classpath -->
   <path id="gwt.classpath">
     <fileset dir="${deploy.dir}/lib">
+      <include name="gwt-incubator.jar"/>
       <include name="gwt-widgets.jar"/>
       <include name="advanced-components-1.4.1.jar"/>
       <include name="*-gwt-0.0-SNAPSHOT.jar"/>
