Added charities.  When purchasing an item, a random "core" charity will be selected and 10% of the purchase price will be donated as bling.  Members can be set as regular or core charities via the member info panel in Admin.  If no charities are specified, no donation will be made, so this will not change how purchases are currently made, at least until charities are created.  Still need to add UI to allow members to choose their charity, charity cash outs, and some other tidbits.

--- a/src/gwt/client/adminz/AdminMessages.properties
+++ b/src/gwt/client/adminz/AdminMessages.properties
@@ -121,7 +121,8 @@ spamSent = Your message has been sent to {0} accounts. {1} accounts had an \
 infoTitle = Member Info
 
 mipChangedRole = Member''s role has been changed to {0}.
-
+mipUpdatedCharityStatus = Member''s charity status has been updated.
+ 
 #
 # A/B Tests
 
