Blurb updates: image conversions.

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -181,12 +181,12 @@ editorBlurb3 = Furniture can either an image or a SWF file. If your furniture is
 editorBlurb4 = Whirled games are developed in ActionScript 3 (AS3) either using the \
   standalone compiler or the Flash 9 Authoring Tool. Integrate your game with Whirled by \
   following the <a href="http://wiki.whirled.com/Create_games">wiki</a>.
-editorBlurb5 = Avatars can only be SWF files. If you want to upload a static image as your \
-  avatar, we suggest you look at the <a href="#shop-l_5_1609">easy image avatar</a>. It''s free \
-  and you can remix it with your static image.
+editorBlurb5 = Avatars are usually SWF files. If you want to upload a plain image \
+  (animated gifs do not presently work inside whirled) as your avatar, we can convert it into \
+  a cheesy bouncing avatar (you can change a few settings).
 editorBlurb6 = Pets are animated characters that wander rooms, change moods, and \
-  interact with players. Pets can only be SWF files. If you want to upload a static image as \
-  your pet, buy a free <a href="#shop-l_6_404">easy image pet</a> instead.
+  interact with players. Pets can only be SWF files. If you upload an image, we can convert it \
+  into a cheesy bouncing pet (you can change a few settings).
 editorBlurb7 = Music and sound effects can be added to <a href="#world-home">your room</a>, \
   and must be MP3 format.
 editorBlurb8 = Videos can be from YouTube, or FLV video files.
