--- a/.classpath
+++ b/.classpath
@@ -116,5 +116,6 @@
 	<classpathentry kind="lib" path="extlibs/java/quartz.jar"/>
 	<classpathentry kind="lib" path="extlibs/java/gwt-dnd.jar"/>
 	<classpathentry kind="lib" path="extlibs/java/advanced-components-1.4.1.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/gwt-incubator.jar"/>
 	<classpathentry kind="output" path="dist/classes"/>
 </classpath>
