Pretty up the top of the groups page.

--- a/src/gwt/client/groups/GroupsMessages.properties
+++ b/src/gwt/client/groups/GroupsMessages.properties
@@ -48,12 +48,18 @@ errTagsOnExclusive = In order to change the group policy to Exclusive, please re
 #
 # GalaxyPanel
 
+galaxyTitle = Groups
 galaxyMyGroupsTitle = My Groups
 galaxyMyGroupsNone = You have no groups
 galaxyMyGroupsDiscussions = discussions
 galaxyMyGroupsSeeAll = See all...
 
-galaxySearch = Search
+galaxySearchTitle = Search Groups
+
+galaxyIntroBlurb = Groups are a fun way to build your own virtual world.  Create a group hall, \
+  gather friends, post discussions and throw parties!  Think you''ve got what it takes to create \
+  the next hot hangout on Whirled?  <a href="#groups-edit">Make your own</a> Group!
+galaxyCreate = + Create Group
 
 galaxyMemberCount = {0} members
 galaxyPeopleInRooms = {0} in hall now
@@ -63,7 +69,7 @@ galaxyNoGroups = No groups found!
 
 galaxyPopularTags = Popular Tags:
 galaxyNoPopularTags = No popular tags found!
-galaxyCurrentTag = Showing: {0}
+galaxyCurrentTag = Showing Tag: {0}
 galaxyTagClear = clear
 
 galaxySortBy = Sort By:
@@ -72,11 +78,6 @@ sortByName = Alphabetical
 sortByNumMembers = Number of Members
 sortByCreatedDate = Date Created
 sortByRelevance = Search Relevance
-
-galaxyCreateTitle = Create a New Group
-galaxyCreateBlurb = If you think you and your friends have the chops to create \
-  an exciting place for people to hang out, then you should create your own group!
-galaxyCreate = Create New Group
 
 #
 # GroupDetailPanel
