Pretty up account creation page and add an A/B test that displays one of three promotional images for whirled, or none.

--- a/src/gwt/client/account/AccountMessages.properties
+++ b/src/gwt/client/account/AccountMessages.properties
@@ -51,8 +51,9 @@ createDisplayNameTip = Your Whirled name is what other people will see in Whirle
 createCaptcha = Humanness:
 createCaptchaLoading = Loading Captcha...
 
-createTOS = <a href="http://wiki.whirled.com/Terms_of_Service">Terms of Service</a>:
-createTOSAgree = I agree to the Terms of Service
+createTOSAgree = I agree to the \
+  <a href="http://wiki.whirled.com/Terms_of_Service" target="_blank" class="external">Terms \
+  of Service</a>
 
 createGo = Join now!
 
